fixed weird issue with nav on smaller screen sizes

--- a/SeniorProj/Client/Shared/NavMenu.razor.css
+++ b/SeniorProj/Client/Shared/NavMenu.razor.css
@@ -92,25 +92,25 @@ nav{
     margin-bottom: 25px;
 }
   .navbar ul{                  /* ul, li, a will move to expanded area onclick*/
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 100%;
+    max-height: 150px;
     background: #2c3e50;
-    top: 155px;
+    top: 154px;
     left: -100%;
     text-align: center;
     transition: all .5s;
   }
   .navbar ul li{
-    display: block;
-    margin: 10% 0;
-    line-height: 30px;
+    display: inline-grid;
+    margin: 1px auto;
+    line-height: 20px;
     text-align: center;
   }
   .navbar ul li a{
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
-    margin: auto;
+    margin: 1px auto;
     white-space: nowrap;
     
   }
